--- a/src/app/shop/orders/order-item/order-item.component.html
+++ b/src/app/shop/orders/order-item/order-item.component.html
@@ -2,7 +2,7 @@
   <div *ngIf="order" class="order">
     <div class="item number">№{{order.order_number}}</div>
     <div class="item">{{order.total_amount}}$</div>
-    <div class="item">{{formattedDate()}}</div>
+    <div class="item date">{{formattedDate()}}</div>
   </div>
   <div class="button-wrapper">
     <app-button (onClick)="openOrderDetails()" [text]="'Order details'"></app-button>
