--- a/src/app/shop/orders/order-item/order-item.component.scss
+++ b/src/app/shop/orders/order-item/order-item.component.scss
@@ -12,6 +12,7 @@
     .item {
       flex: 1;
       font-size: 16px;
+      text-align: center;
     }
     .number {
       font-size: 18px;
@@ -23,5 +24,22 @@
     text-align:right;
     margin-top: 20px;
   }
+}
 
+
+@media screen and (max-width:450px){
+  .order-wrapper {
+    padding: 15px 10px;
+    .order {
+      .item {
+        font-size: 14px;
+      }
+      .date {
+        font-size: 12px;
+      }
+      .number {
+        font-size: 14px;
+      }
+    }
+  }
 }
