--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light ">
-  <a class="nav-link" href="#">
+  <a class="nav-link" routerLink="/">
     <div class="logo-icon"></div>
   </a>
   <button class="navbar-toggler collapsed" type="button" (click)="isCollapsed = !isCollapsed">
