--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -7,6 +7,7 @@ nav {
   padding:0 10px 0 0;
   background-color: white;
   min-height:60px;
+  z-index: 999;
   .logo-icon {
     background-image: url('../../assets/TAODress.png');
     background-repeat: no-repeat;
