Convert images to webp.

--- a/src/app/blog/blog.component.scss
+++ b/src/app/blog/blog.component.scss
@@ -63,11 +63,11 @@
             transform: translateX(-50%);
           }
           &:before {
-            background-image: url('../../assets/newAssets/picture-arrow-up.png');
+            background-image: url('../../assets/newAssets/Frame2/picture-arrow-down.webp');
             top: -18px;
           }
           &:after {
-            background-image: url('../../assets/newAssets/picture-arrow-down.png');
+            background-image: url('../../assets/newAssets/Frame2/picture-arrow-down.webp');
             top: 22px;
           }
         }
