--- a/src/app/blog/posts/post-details/post-details.component.scss
+++ b/src/app/blog/posts/post-details/post-details.component.scss
@@ -38,7 +38,7 @@
     transform: translateX(-50%);
   }
   &:before {
-    background-image: url('/assets/newAssets/picture-arrow-up.png');
+    background-image: url('/assets/newAssets/picture-arrow-up.webp');
     top: -23px;
   }
 }
@@ -89,7 +89,7 @@
   line-height: 18px;
 }
 .separator {
-  background-image: url('/assets/newAssets/picture-arrow-down.png');
+  background-image: url('/assets/newAssets/Frame2/picture-arrow-down.webp');
   background-repeat: no-repeat;
   background-size: 100% 100%;
   height: 30px;
