--- a/src/styles.scss
+++ b/src/styles.scss
@@ -52,7 +52,7 @@ ul {
   padding: 0;
 }
 body {
-  background-image: url('assets/newAssets/7671.jpg');
+  background-image: url('assets/newAssets/7671.webp');
   background-position: center;
   background-size: 100% 100%;
   background-repeat: repeat-y;
